Added two featured html elements and created the skeleton of a form to be used to input numbers

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
         </div>
     </header>
 
+    <div class="container">
+        <div class="row justify-content-between">
+            <div class="col-12 col-sm-4 math-tool">
+                <h1>LCM</h1>
+                <hr/>
+                <form>
+                    <input type="text">
+                    <input type="text">
+                </form>
+            </div>
+            <div class="col-12 col-sm-4 math-tool">
+                <h1>GCF</h1>
+                <hr/>
+                <form>
+                    <input type="text">
+                    <input type="text">
+                </form>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
