--- a/index.html
+++ b/index.html
@@ -18,20 +18,28 @@
 
     <div class="container">
         <div class="row justify-content-between">
-            <div class="col-12 col-sm-4 math-tool">
-                <h1>LCM</h1>
-                <hr/>
-                <form>
-                    <input type="text">
-                    <input type="text">
-                </form>
-            </div>
-            <div class="col-12 col-sm-4 math-tool">
-                <h1>GCF</h1>
-                <hr/>
-                <form>
-                    <input type="text">
-                    <input type="text">
+            <div class="col-12 math-tool">
+                <form class="py-3">
+                    <div class="row justify-content-center">
+                        <h1 style="font-size: 16px; padding-bottom: 16px;">Insert a single number to use single-number operations and multiple numbers separated by commas to use multi-number operations</h1>
+                    </div>
+                    <div class="row justify-content-center">
+                        <input type="text" size="50px" name="num-input" style="text-align: center;">
+                    </div>
+                    <div class="row justify-content-between mt-5">
+                        <div class="col-3">
+                            <button id="lcm-btn">LCM</button>
+                        </div>
+                        <div class="col-3">
+                            <button id="square-btn">Square</button>
+                        </div>
+                        <div class="col-3">
+                            <button id="square-root-btn">Square Root</button>
+                        </div>
+                        <div class="col-3">
+                            <button id="gcf-btn">GCF</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
