--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <!-- Header -->
     <header class="container-fluid">
         <div class="row">
             <div class="col-12 text-light">
@@ -16,13 +17,18 @@
         </div>
     </header>
 
+    <!-- Main Card -->
     <div id="math-tool" class="container">
         <form class="py-3">
+
+            <!-- Text Instructions -->
             <div class="row justify-content-center">
-                <h1 style="font-size: 16px; padding-bottom: 16px;">
+                <h1 class="mx-3" style="font-size: 16px; padding-bottom: 16px;">
                     Insert a single number to use single-number operations and multiple numbers separated by commas to use multi-number operations.
                 </h1>
             </div>
+
+            <!-- Input and Output Fields -->
             <div class="row justify-content-center">    
                 <input class="col-10 col-md-5" type="text" size="50px" id="num-input" style="text-align: center;" placeholder="Input">
                 <div class="col-12 col-md-1" id="arrow-right">
@@ -33,18 +39,20 @@
                 </div>
                 <input class="col-10 col-md-5" type="text" size="50px" id="num-output" style="text-align: center;" placeholder="Output" readonly>
             </div>
+
+            <!-- Buttons -->
             <div class="row justify-content-between mt-5">
-                <div class="col-3">
+                <div class="col-6 col-sm-3 py-3">
                     <button type="button" class="btn btn-primary" id="lcm-btn">LCM</button>
                 </div>
-                <div class="col-3">
+                <div class="col-6 col-sm-3 py-3">
+                    <button type="button" class="btn btn-primary" id="gcf-btn">GCF</button>
+                </div>
+                <div class="col-6 col-sm-3 py-3">
                     <button type="button" class="btn btn-primary" id="square-btn">Square</button>
                 </div>
-                <div class="col-3">
+                <div class="col-6 col-sm-3 py-3">
                     <button type="button" class="btn btn-primary" id="square-root-btn">Square Root</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-primary" id="gcf-btn">GCF</button>
                 </div>
             </div>
         </form>
